# machine-learning-flow

./: README.md  pyproject.toml
example/: example_ml_flow.ipynb
example/dot_and_joblib/: music-recommender.dot  music-recommender.joblib
